HALG: Complete notes

--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -30,7 +30,7 @@
 	$n$ equations is called the \emph{solution set} of our system.
 \end{definition}
 
-\begin{theorem}[Notes 1.1.4]
+\begin{theorem}[Theorem 1.1.4]
 	If the solution set of a linear system of equations is non-empty, then we obtain
 	all solutions by adding componentwise an arbitrary solution of the associated
 	homogenised system to a fixed soltuion of the system itself.
@@ -67,15 +67,15 @@
 	\end{align*}
 \end{definition}
 
-\begin{lemma}[Notes 1.2.2]
+\begin{lemma}[Lemma 1.2.2]
 	If $V$ is a vector space and $\vec v\in V$, then $0\vec v =\vec 0$.
 \end{lemma}
 
-\begin{lemma}[Notes 1.2.3]
+\begin{lemma}[Lemma 1.2.3]
 	If $V$ is a vector space and $\vec v\in V$, then $(-1)\vec v = -\vec v$.
 \end{lemma}
 
-\begin{lemma}[Notes 1.2.4]
+\begin{lemma}[Lemma 1.2.4]
 	If $V$ is a vector space over a field $F$, then $\lambda\vec 0=\vec 0$
 	for all $\lambda F$. Further, if $\lambda\vec v=\vec 0$ then either
 	$\lambda =0$ or $\vec v =\vec 0$.
@@ -95,7 +95,7 @@
 	and $\lambda\in F$ we have $\vec u + \vec v\in U$ and $\lambda\vec v\in U$.
 \end{definition}
 
-\begin{proposition}[Notes 1.4.5]
+\begin{proposition}[Proposition 1.4.5]
 	Let $T$ be a subset of a vector space $V$ over a field $F$. Then amongst all
 	vector subspaces of $V$ that include $T$ there is a smallest vector subspace
 	\begin{align*}
@@ -131,7 +131,7 @@
 	set in $V$.
 \end{definition}
 
-\begin{theorem}[Notes 1.5.11]
+\begin{theorem}[Theorem 1.5.11]
 	Let $F$ be a field, $V$ a vector space over $F$ and $\vec v_1,...,\vec v_r\in V$
 	vectors. The family $\left(\vec v_i\right)_{1\leq i\leq r}$ is a basis of $V$
 	iff the following mapping
@@ -151,12 +151,12 @@
 	\end{enumerate}
 \end{theorem}
 
-\begin{corollary}[Notes 1.5.13]
+\begin{corollary}[Corollary 1.5.13]
 	Let $V$ be a finitely generated vector space over a field $F$. Then $V$
 	has a basis.
 \end{corollary}
 
-\begin{theorem}[Notes 1.5.14]
+\begin{theorem}[Theorem 1.5.14]
 	Let $V$ be a vector space.
 	\begin{enumerate}
 		\item Let $L\subseteq V$ be a linearly independent subset and $E$ is minimal
@@ -179,7 +179,7 @@
 	This vector subspace is called the \emph{free vector space on the set $X$}.
 \end{definition}
 
-\begin{theorem}[Notes 1.5.16]
+\begin{theorem}[Theorem 1.5.16]
 	Let $F$ be a field, $V$ and $F$-vector space and $(\vec v_i)_{i\in I}$ a
 	family of vectors from $V$. The following are equivalent:
 	\begin{enumerate}
@@ -193,7 +193,7 @@
 
 \subsection{Dimension of a vector space}
 
-\begin{theorem}[Fundamental Estimate of Linear Algebra; Notes 1.6.1]
+\begin{theorem}[Fundamental Estimate of Linear Algebra; Theorem 1.6.1]
 	No linearly independent subset of a given vector space has more elements than
 	a generating set. Thus if $V$ is a vector space, $L\subset V$ a linearly independent
 	subset and $E\subseteq V$ a generating set, then \begin{align*}
@@ -201,13 +201,13 @@
 	\end{align*}
 \end{theorem}
 
-\begin{theorem}[Steinitz Exchange Theorem; Notes 1.6.2]
+\begin{theorem}[Steinitz Exchange Theorem; Theorem 1.6.2]
 	Let $V$ be a vector space, $L\subset V$ a finite linearly independent subset
 	and $E\subseteq V$ a generating set . Then there is an injection $\phi:L\to E$
 	such that $(E\setminus\phi(L))\cup L$ is also a generating set for $V$.
 \end{theorem}
 
-\begin{lemma}[Exchange Lemma; Notes 1.6.3]
+\begin{lemma}[Exchange Lemma; Lemma 1.6.3]
 	Let $V$ be a vector space, $M\subseteq V$ a linearly independent subset, and
 	$E\subseteq V$ a generating subset, such that $M\subseteq E$. If $\vec w\in V\setminus M$
 	such that $M\cap\{\vec w\}$ is linearly independent, then there exists
@@ -215,7 +215,7 @@
 	generating set for $V$.
 \end{lemma}
 
-\begin{corollary}[Notes 1.6.4]
+\begin{corollary}[Corollary 1.6.4]
 	Let $V$ be a finitely generated vector space.
 	\begin{enumerate}
 		\item $V$ has a finite basis.
@@ -230,7 +230,7 @@
 	If $\dim V=\infty$ we say $V$ is \emph{infinite dimensional}.
 \end{definition}
 
-\begin{corollary}[Notes 1.6.7]
+\begin{corollary}[Corollary 1.6.7]
 	Let $V$ be a finitely generated vector space.
 	\begin{enumerate}
 		\item Each linearly independent subset $L\subseteq V$ has at most
@@ -240,7 +240,7 @@
 	\end{enumerate}
 \end{corollary}
 
-\begin{corollary}[Notes 1.6.8]
+\begin{corollary}[Corollary 1.6.8]
 	A proper vector subspace of a finite dimensional vector space has itself a
 	strictly smaller dimension.
 \end{corollary}
@@ -284,12 +284,12 @@
 	we write it as $V_1\oplus\cdots\oplus V_n$.
 \end{definition}
 
-\begin{theorem}[Notes 1.7.7]
+\begin{theorem}[Theorem 1.7.7]
 	Let $n$ be a natural number. Then a vector space over a field is isomorphic
 	to $F^n$ iff it has dimension $n$.
 \end{theorem}
 
-\begin{lemma}[Notes 1.7.8]
+\begin{lemma}[Lemma 1.7.8]
 	Let $V,W$ be vector spaces over $F$ and let $B\subset V$ be a basis. Then
 	restriction of a mapping gives a bijection
 	\begin{align*}
@@ -298,7 +298,7 @@
 	\end{align*}
 \end{lemma}
 
-\begin{proposition}[Notes 1.7.9]
+\begin{proposition}[Proposition 1.7.9]
 	Let $V,W$ be vector spaces.
 	\begin{enumerate}
 		\item Every injective mapping $f:V\to W$ has a \emph{left inverse}.
@@ -319,11 +319,11 @@
 	kernel $\dim(\ker V)$ is called the nullity of $f$.
 \end{definition}
 
-\begin{lemma}[Notes 1.8.2]
+\begin{lemma}[Lemma 1.8.2]
 	A linear mapping is injective if and only if its kernel is zero.
 \end{lemma}
 
-\begin{theorem}[Rank-Nullity Theorem; Notes 1.8.4]
+\begin{theorem}[Rank-Nullity Theorem; Theorem 1.8.4]
 	Let $f:V\to W$ be a linear mapping between two vector spaces. Then
 	\begin{align*}
 		\dim V = \dim(\ker f) + \dim(\img f).
@@ -341,7 +341,7 @@
 
 \subsection{Linear mappings $F^m\to F^n$ and matrices}
 
-\begin{theorem}[Notes 2.1.1]
+\begin{theorem}[Theorem 2.1.1]
 	Let $F$ be a field and let $m,n\in\N$. There is a bijection between the space of
 	linear mappings $F^m\to F^n$ and the set of matrices with $n$ rows and $m$
 	columns and entries in $F$:
@@ -366,7 +366,7 @@
 	\end{align*}
 \end{definition}
 
-\begin{theorem}[Notes 2.1.8]
+\begin{theorem}[Theorem 2.1.8]
 	Let $g:F^l\to F^m$ and $f:F^m\to F^n$ be linear mappings. The representing matrix
 	of their composition is the product of their representing matrices:
 	\begin{align*}
@@ -374,7 +374,7 @@
 	\end{align*}
 \end{theorem}
 
-\begin{proposition}[Notes 2.1.9]
+\begin{proposition}[Proposition 2.1.9]
 	Let $k,l,m,n\in\N$, $A,A'\in\Mat(n\times m;F)$, $B,B'\in\Mat(m\times l;F)$,
 	$C\in\Mat(l\times k; F)$ and $I=I_m$ the $(m\times m)$-identity matrix.
 	Then the following hold:
@@ -408,7 +408,7 @@
 	matrix in at most one entry.
 \end{definition}
 
-\begin{theorem}[Notes 2.2.3]
+\begin{theorem}[Theorem 2.2.3]
 	Every square matrix with entries in a field can be written as a product of
 	elementary matrices.
 \end{theorem}
@@ -418,7 +418,7 @@
 	first $1$s along the diagonal and then $0$s, is said to be in \emph{Smith Normal Form}.
 \end{definition}
 
-\begin{theorem}[Notes 2.2.5]
+\begin{theorem}[Theorem 2.2.5]
 	For each matrix $A\in\Mat(n\times m;F)$ there exist invertible matrices $P$
 	and $Q$ such that $PAQ$ is a matrix in Smith Normal Form.
 \end{theorem}
@@ -430,7 +430,7 @@
 	of $A$.
 \end{definition}
 
-\begin{theorem}[Notes 2.2.8]
+\begin{theorem}[Theorem 2.2.8]
 	The column rank and the row rank of any matrix are equal.
 \end{theorem}
 
@@ -442,7 +442,7 @@
 
 \subsection{Abstract linear mappings and matrices}
 
-\begin{theorem}[Notes 2.3.1]
+\begin{theorem}[Theorem 2.3.1]
 	Let $F$ be a field, $V$ and $W$ vector spaces over $F$ with ordered bases $A=(\vec v_1,...,\vec v_m)$
 	and $B=(\vec w_1,...,\vec w_n)$. Then to each linear mapping $f:V\to W$ we associate a
 	\emph{representing matrix} $\repr{B}{f}{A}$ whose entries $a_{ij}$ are defined by the
@@ -457,7 +457,7 @@
 	\end{align*}
 \end{theorem}
 
-\begin{theorem}[Notes 2.3.2]
+\begin{theorem}[Theorem 2.3.2]
 	Let $F$ be a field and $U,V,W$ finite dimensional vector spaces over $F$ with ordered bases
 	$A,B,C$. If $f:U\to V$ and $g:V\to W$ are linear mappings, then the representing matrix of
 	the composition $g\circ f:U\to W$ is the matrix product of the representing matrices of
@@ -478,7 +478,7 @@
 		with respect to the basis $A$}.
 \end{definition}
 
-\begin{theorem}[Notes 2.3.4]
+\begin{theorem}[Theorem 2.3.4]
 	Let $V,W$ be finite dimensional $F$-vector spaces with ordered bases $A,B$ and let $f:V\to W$
 	be a linear mapping. The following holds for all $\vec v\in V$:
 	\begin{align*}
@@ -499,7 +499,7 @@
 	equalities $\vec v_j=\sum_{i=1}^n a_{ij}\vec w_i$.
 \end{definition}
 
-\begin{theorem}[Notes 2.4.3]
+\begin{theorem}[Theorem 2.4.3]
 	Let $V,W$ be finite dimensional $F$-vector spaces and let $f:V\to W$ be a linear mapping.
 	Suppose that $A,A'$ are ordered bases of $V$ and $B,B'$ are ordered bases of $W$. Then
 	\begin{align*}
@@ -507,7 +507,7 @@
 	\end{align*}
 \end{theorem}
 
-\begin{corollary}[Notes 2.4.4]
+\begin{corollary}[Corollary 2.4.4]
 	Let $V$ be a finite dimensional vector space and let $f:V\to V$ be an endomorphism of $V$.
 	Suppose that $A,A'$ are ordered bases of $V$. Then
 	\begin{align*}
@@ -515,7 +515,7 @@
 	\end{align*}
 \end{corollary}
 
-\begin{theorem}[Notes 2.4.5]
+\begin{theorem}[Theorem 2.4.5]
 	Let $f:V\to W$ be a linear mapping between finite dimensional $F$-vector spaces. There exist
 	and ordered basis $A$ of $V$ and an ordered basis $B$ of $W$ such that the representing matrix
 	$\repr{B}{f}{A}$ has zero entries everywhere except possibly on the diagonal, and along the
@@ -548,13 +548,13 @@
 	$a\in F$ has a multiplicative inverse $\inv a\in F$.
 \end{definition}
 
-\begin{proposition}[Notes 3.1.11]
+\begin{proposition}[Proposition 3.1.11]
 	Let $m\in\N$. The commutative ring $\Z/m\Z$ is a field iff $m$ is prime.
 \end{proposition}
 
 \subsection{Properties of rings}
 
-\begin{lemma}[Notes 3.2.1]
+\begin{lemma}[Lemma 3.2.1]
 	Let $(R,+,\cdot)$ be a ring and let $a,b\in R$. Then
 	\begin{enumerate}
 		\item $0a=0=a0$.
@@ -572,7 +572,7 @@
 	$0a=0$, and negative multiples are defined by $(-m)a=-(ma)$.
 \end{definition}
 
-\begin{lemma}[Notes 3.2.4]
+\begin{lemma}[Lemma 3.2.4]
 	Let $R$ be a ring, let $a,b\in R$ and let $m,n\in\Z$. Then:
 	\begin{enumerate}
 		\item $m(a+b)=ma+mb$;
@@ -601,16 +601,16 @@
 	An \emph{integral domain} is a non-zero commutative ring that has no zero-divisors.
 \end{definition}
 
-\begin{proposition}[Notes 3.2.15]
+\begin{proposition}[Proposition 3.2.15]
 	Let $R$ be an integral domain and let $a,b,c\in R$. If $ab=ac$ and $a\not=0$
 	then $b=c$.
 \end{proposition}
 
-\begin{proposition}[Notes 3.2.16]
+\begin{proposition}[Proposition 3.2.16]
 	Let $m\in\N$. Then $\Z/m\Z$ is an integral domain iff $m$ is prime.
 \end{proposition}
 
-\begin{theorem}[Notes 3.2.17]
+\begin{theorem}[Theorem 3.2.17]
 	Every finite integral domain is a field.
 \end{theorem}
 
@@ -642,7 +642,7 @@
 	\end{enumerate}
 \end{lemma}
 
-\begin{theorem}[Notes 3.3.4]
+\begin{theorem}[Theorem 3.3.4]
 	Let $R$ be an integral domain and let $P,Q\in R[X]$ with $Q$ monic. Then there exists
 	a unique $A,B\in R[X]$ such that $P=AQ+B$ and $\deg B<\deg Q$ or $B=0$.
 \end{theorem}
@@ -658,12 +658,12 @@
 	An element $\lambda\in R$ is a \emph{root} of $P$ iff $P(\lambda) = 0$.
 \end{definition}
 
-\begin{proposition}[Notes 3.3.9]
+\begin{proposition}[Proposition 3.3.9]
 	Let $R$ be a commutative ring, let $\lambda\in R$ and $P(X)\in R[X]$. Then $\lambda$
 	is a root of $P(X)$ iff $(X-\lambda)$ divides $P(X)$.
 \end{proposition}
 
-\begin{theorem}[Notes 3.3.10]
+\begin{theorem}[Theorem 3.3.10]
 	Let $R$ be a field, or more generally an integral domain. Then a non-zero polynomial
 	$P\in R[X]\setminus\{0\}$ has at most $\deg P$ roots in $R$.
 \end{theorem}
@@ -677,7 +677,7 @@
 	The field of complex numbers, $\C$, is algebraically closed.
 \end{theorem}
 
-\begin{theorem}[Notes 3.3.14]
+\begin{theorem}[Theorem 3.3.14]
 	If $F$ is an algebraically closed field, then every non-zero polynomial
 	$P\in F[X]\setminus\{0\}$ \emph{decomposes into linear factors}
 	\begin{align*}
@@ -698,7 +698,7 @@
 	\end{align*}
 \end{definition}
 
-\begin{lemma}[Notes 3.4.5]
+\begin{lemma}[Lemma 3.4.5]
 	Let $R$ and $S$ be rings and $f:R\to S$ a ring homomorphism. Then for all $x,y\in R$
 	and $m\in\Z$:
 	\begin{enumerate}
@@ -730,7 +730,7 @@
 	abuse notation by writing $_R\lra{t_1,...,t_n}$.
 \end{definition}
 
-\begin{proposition}[Notes 3.4.14]
+\begin{proposition}[Proposition 3.4.14]
 	Let $R$ be a commutative ring and let $T\subseteq R$. Then $_R\lra{T}$ is the
 	smallest ideal of $R$ that contains $T$.
 \end{proposition}
@@ -749,19 +749,19 @@
 	\end{align*}
 \end{definition}
 
-\begin{proposition}[Notes 3.4.18]
+\begin{proposition}[Proposition 3.4.18]
 	Let $f:R\to S$ be a ring homomorphism. Then $\ker f$ is an ideal of $R$.
 \end{proposition}
 
-\begin{lemma}[Notes 3.4.20]
+\begin{lemma}[Lemma 3.4.20]
 	$f$ is injective iff $\ker f = \{0\}$.
 \end{lemma}
 
-\begin{lemma}[Notes 3.4.21]
+\begin{lemma}[Lemma 3.4.21]
 	The intersection of any collection of ideals of a ring $R$ is an ideal of $R$.
 \end{lemma}
 
-\begin{lemma}[Notes 3.4.22]
+\begin{lemma}[Lemma 3.4.22]
 	Let $I$ and $J$ be ideals of a ring $R$. Then
 	\begin{align*}
 		I+J=\{a+b:a\in I, b\in J\}
@@ -774,7 +774,7 @@
 	is a ring under the operations of addition and multiplication defined in $R$.
 \end{definition}
 
-\begin{proposition}[Notes 3.4.26]
+\begin{proposition}[Proposition 3.4.26]
 	Let $R'$ be a subset of a ring $R$. Then $R'$ is a subring iff
 	\begin{enumerate}
 		\item $R'$ has a multiplicative identity, and
@@ -783,7 +783,7 @@
 	\end{enumerate}
 \end{proposition}
 
-\begin{proposition}[Notes 3.4.28]
+\begin{proposition}[Proposition 3.4.28]
 	Let $R$ and $S$ be rings and $f:R\to S$ a ring homomorphism.
 	\begin{enumerate}
 		\item If $R'$ is a subring of $R$ then $f(R')$ is a subring of $S$. In particular
@@ -838,7 +838,7 @@
 	is the set $(R/\sim)$.
 \end{definition}
 
-\begin{theorem}[Notes 3.6.4]
+\begin{theorem}[Theorem 3.6.4]
 	Let $I$ be an ideal in a ring $R$. Define $+':R/I\times R/I\to R/I$ by
 	\begin{align*}
 		(x+I)+'(y+I) = (x+y) + I
@@ -850,7 +850,7 @@
 	for all $x,y\in R$. Then $(R/I,+',\times')$ is itself a ring.
 \end{theorem}
 
-\begin{theorem}[Notes 3.6.7]
+\begin{theorem}[Theorem 3.6.7]
 	Let $I$ be an ideal in a ring $R$.
 	\begin{enumerate}
 		\item The mapping $\eqc -$ is a surjective ring homomorphism with kernel $I$.
@@ -859,7 +859,7 @@
 	\end{enumerate}
 \end{theorem}
 
-\begin{theorem}[First Isormorphism Theorem for Rings; Notes 3.6.9]
+\begin{theorem}[First Isormorphism Theorem for Rings; Theorem 3.6.9]
 	Let $R$ and $S$ be rings. Then every ring homomorphism $f:R\to S$ induces a ring isomorphism
 	\begin{align*}
 		\bar f:R/\ker f \tilde\to \im f.
@@ -884,7 +884,7 @@
 	\end{align*}
 \end{definition}
 
-\begin{lemma}[Notes 3.7.8]
+\begin{lemma}[Lemma 3.7.8]
 	Let $M$ be an $R$-module, $r\in R$ and $a\in M$.
 	\begin{enumerate}
 		\item $0_Ra=0_M$.
@@ -908,12 +908,12 @@
 	$R$-module with respect to the operations of $M$ restricted to $M'$.
 \end{definition}
 
-\begin{lemma}[Notes 3.7.21]
+\begin{lemma}[Lemma 3.7.21]
 	Let $f:M\to N$ be an $R$-homomorphism. Then $\ker f$ is a submodule of $M$ and $\im f$
 	is a submodule of $N$.
 \end{lemma}
 
-\begin{lemma}[Notes 3.7.22]
+\begin{lemma}[Lemma 3.7.22]
 	Let $R$ be a ring, let $M$ and $N$ be $R$-modules and let $f:M\to N$ be an $R$-homomorphism.
 	Then $f$ is injective iff $\ker f =\{0_M\}$.
 \end{lemma}
@@ -928,7 +928,7 @@
 	iff it is generated by a finite set. It is called \emph{cyclic} iff it is generated by a singleton.
 \end{definition}
 
-\begin{lemma}[Notes 3.7.28-30]
+\begin{lemma}[Lemma 3.7.28-30]
 	Let $M$ an $R$-module.
 	\begin{itemize}
 		\item Let $T\subseteq M$. Then $_R\lra T$ is the smallest submodule of $M$ that contains $T$.
@@ -947,7 +947,7 @@
 	The \emph{factor of $M$ by $N$}, denoted $M/N$, is the set of all cosets of $N$ in $M$.
 \end{definition}
 
-\begin{theorem}[Notes 3.7.31]
+\begin{theorem}[Theorem-Definition 3.7.31]
 	Let $M$ an $R$-module and $N$ a submodule of $M$. Define $+',\times'$ as follows:
 	\begin{align*}
 		(a+N)+'(b+N) & = (a+b)+N \\
@@ -956,7 +956,17 @@
 	for all $a,b\in M,r\in R$. Then $(M/N,+',\times')$ is itself an $R$-module.
 \end{theorem}
 
-\begin{theorem}[Notes 3.7.32]
+\begin{lemma}[Exercise 66]
+	Let $V$ and $F$-vector space and $W\subseteq V$ a subspace of $V$. The quotient
+	$V/W$ is an $F$-vector space, called the \emph{quotient vector space}.
+
+	If $\dim V<\infty$, then
+	\begin{align*}
+		\dim (V/W) = \dim V - \dim W.
+	\end{align*}
+\end{lemma}
+
+\begin{theorem}[Theorem 3.7.32]
 	Let $L,M$ be $R$-modules and $N$ a submodule of $M$. Then
 	\begin{enumerate}
 		\item The mapping $\eqc - : M\to M/N$ is a surjective $R$-homomorphism with kernel $N$.
@@ -965,7 +975,7 @@
 	\end{enumerate}
 \end{theorem}
 
-\begin{theorem}[First Isormorphism Theorem for Modules; Notes 3.6.9]
+\begin{theorem}[First Isormorphism Theorem for Modules; Theorem 3.6.9]
 	Let $M$ and $N$ be $R$-modules. Then every $R$-homomorphism $f:M\to N$ induces an $R$-isomorphism
 	\begin{align*}
 		\bar f:M/\ker f \tilde\to \im f.
@@ -993,7 +1003,7 @@
 	\end{align*}
 \end{definition}
 
-\begin{lemma}[Notes 4.1.5]
+\begin{lemma}[Lemma 4.1.5]
 	Let $n\in\N$. Then $\sgn:S_n\to\{-1,1\}$ is a group homomorphism. In particular, for all $\sigma,\tau\in S_n$,
 	\begin{align*}
 		\sgn(\sigma\tau) = (\sgn\sigma)(\sgn\tau).
@@ -1023,7 +1033,7 @@
 	elements that has at least two entries equal.
 \end{definition}
 
-\begin{theorem}[Notes 4.3.6]
+\begin{theorem}[Theorem 4.3.6]
 	Let $F$ be a field. The mapping
 	\begin{align*}
 		\det : \Mat(n; F) \to F
@@ -1032,14 +1042,14 @@
 	that takes the value $1_F$ on the identity matrix.
 \end{theorem}
 
-\begin{theorem}[Notes 4.4.1]
+\begin{theorem}[Theorem 4.4.1]
 	Let $R$ be a commutative ring and let $A,B\in\Mat(n; R)$. Then
 	\begin{align*}
 		\det (AB) = (\det A) (\det B).
 	\end{align*}
 \end{theorem}
 
-\begin{theorem}[Notes 4.4.2]
+\begin{theorem}[Theorem 4.4.2]
 	A matrix $A$ is invertible iff $\det A \not= 0$.
 \end{theorem}
 
@@ -1051,7 +1061,7 @@
 	\end{align*}
 \end{corollary}
 
-\begin{lemma}[Notes 4.4.4]
+\begin{lemma}[Lemma 4.4.4]
 	Let $A\in\Mat(n;R)$ with $R$ commutative. Then
 	\begin{align*}
 		\det A^T = \det A.
@@ -1066,7 +1076,7 @@
 	where $A\lra{i,j}$ is the matrix obtained from $A$ by deleting the $i$-th row and the $j$-th column.
 \end{definition}
 
-\begin{theorem}[Notes 4.4.7]
+\begin{theorem}[Theorem 4.4.7]
 	Let $A=(a_{ij})\in\Mat(n; R)$ with $R$ commutative. For a fixed $i$ the $i$-th row expansion
 	of the determinant is
 	\begin{align*}
@@ -1083,18 +1093,18 @@
 	$(n\times n)$ matrix whose entries are $(\adj A)_{ij} = C_{ji}$.
 \end{definition}
 
-\begin{theorem}[Cramer's rule; Notes 4.4.9]
+\begin{theorem}[Cramer's rule; Theorem 4.4.9]
 	Let $A\in\Mat(R;n)$ with $R$ commutative. Then
 	\begin{align*}
 		A(\adj A) = (\det A)I_n.
 	\end{align*}
 \end{theorem}
 
-\begin{corollary}[Notes 4.4.11]
+\begin{corollary}[Corollary 4.4.11]
 	Let $A\in\Mat(n;R)$ with $R$ commutative. Then $A$ is invertible iff $\det A\in R^\times$.
 \end{corollary}
 
-\begin{theorem}[Jacobi's formula; Notes 4.4.14]
+\begin{theorem}[Jacobi's formula; Theorem 4.4.14]
 	Let $A=(a_{ij})$ where $a_{ij}:\R\to\R$. Then
 	\begin{align*}
 		\frac{d}{dt}\det A = \tr(\adj A)\frac{dA}{dt}.
@@ -1120,17 +1130,17 @@
 		$A$}. It is denoted $\chi_(x)$.
 \end{definition}
 
-\begin{theorem}[Notes 4.5.4]
+\begin{theorem}[Theorem 4.5.4]
 	Each endomorphism of a non-zero finite dimensional vector space over an algebraically closed field
 	has an eigenvalue.
 \end{theorem}
 
-\begin{theorem}[Notes 4.5.8]
+\begin{theorem}[Theorem 4.5.8]
 	Let $F$ be a field and $A\in\Mat(n;F)$ a square matrix with entries in $F$. The eigenvalues of the
 	linear mapping $A:F^n\to F^n$ are exactly the roots of the characteristic polynomial $\chi_A$.
 \end{theorem}
 
-\begin{lemma}[Notes, Remark 4.5.9]
+\begin{lemma}[Lemma, Remark 4.5.9]
 	Let $A,B\in\Mat(n; R)$ be conjugate, i.e. there exists an invertible $P\in\Mat(n; R)$ such that
 	$A=PB\inv P$. Then $\chi_A(x)=\chi_B(x)$.
 \end{lemma}
@@ -1161,7 +1171,7 @@
 	$\inv PAP=\text{diag}(\lambda_1,...,\lambda_n)$.
 \end{theorem}
 
-\begin{lemma}[Notes 4.6.9]
+\begin{lemma}[Lemma 4.6.9]
 	Let $f:V\to V$ be an endomorphism of a vector space $V$ and let $\vec v_1,...,\vec v_n$ be
 	eigenvectors of $f$ with pairwise different eigenvalues $\lambda_1,...,\lambda_n$. Then
 	the vectors $\vec v_1,...,\vec v_n$ are linearly independent.
@@ -1179,7 +1189,7 @@
 	column equals $1$ is a \emph{Markov matrix}.
 \end{definition}
 
-\begin{lemma}[Notes 4.7.6]
+\begin{lemma}[Lemma 4.7.6]
 	Suppose that $M\in\Mat(n;\R)$ is a Markov matrix. Then $\lambda=1$ is an eigenvalue of $M$.
 \end{lemma}
 
@@ -1195,7 +1205,7 @@
 \subsection{Definition of an inner product space}
 
 \begin{definition}
-	Let $V$ be an $\R$-vector space. An \emph{inner product} on $V$ is positive definite symmetric bilinear 
+	Let $V$ be an $\R$-vector space. An \emph{inner product} on $V$ is positive definite symmetric bilinear
 	form
 	\begin{align*}
 		\lra{-,-}:V\times V\to\R.
@@ -1210,7 +1220,7 @@
 \end{definition}
 
 \begin{definition}
-	Let $V$ be a $\C$-vector space. An \emph{inner product} on $V$ is positive definite sesquilinear 
+	Let $V$ be a $\C$-vector space. An \emph{inner product} on $V$ is positive definite sesquilinear
 	form
 	\begin{align*}
 		\lra{-,-}:V\times V\to\C.
@@ -1226,80 +1236,80 @@
 
 \begin{definition}
 	In a real or complex inner product space $V$ the \emph{norm} $\vabs{\vec v}\in\R$ of a vector $v\in V$
-	is defined by 
+	is defined by
 	\begin{align*}
 		\vabs{\vec v}=\sqrt{\lra{\vec v, \vec v}}.
 	\end{align*}
 	Whenever $\vabs{\vec v}=1$ we call $\vec v\in V$ a \emph{unit}. Two vectors $\vec v,\vec w\in V$
-	are \emph{orthogonal}, written $\vec v\perp \vec w$, iff $\lra{\vec v,\vec w}=0$. 
+	are \emph{orthogonal}, written $\vec v\perp \vec w$, iff $\lra{\vec v,\vec w}=0$.
 \end{definition}
 
 \begin{definition}
 	Let $V$ an inner product space. A family $(\vec v_i\in V)_{i\in I}$ is an \emph{orthonormal family}
-	iff $\lra{\vec v_i,\vec v_j}=\delta_{ij}$. An orthonormal family that is a basis is an 
+	iff $\lra{\vec v_i,\vec v_j}=\delta_{ij}$. An orthonormal family that is a basis is an
 	\emph{orthonormal basis}.
 \end{definition}
 
-\begin{theorem}[Notes 5.1.10]
-	Every finite dimensional inner product space has an orthonormal basis.	
+\begin{theorem}[Theorem 5.1.10]
+	Every finite dimensional inner product space has an orthonormal basis.
 \end{theorem}
 
 \subsection{Orthogonal complements and orthogonal projections}
 
 \begin{definition}
-	Let $V$ be an  inner product space and let $T\subseteq V$ be an arbitrary subset. Define 
+	Let $V$ be an  inner product space and let $T\subseteq V$ be an arbitrary subset. Define
 	the \emph{orthogonal} to $T$ by
 	\begin{align*}
 		T^\bot = \{\vec v \in V : \vec v \perp \vec t \text{ for all }\vec t \in T\}.
 	\end{align*}
 \end{definition}
 
-\begin{proposition}[Notes 5.2.2]
+\begin{proposition}[Proposition 5.2.2]
 	Let $V$ be an inner product space and let $U$ be a finite dimensional subspace $U\subseteq V$.
-	Then $U$ and $U^\bot$ are complementary, i.e. 
+	Then $U$ and $U^\bot$ are complementary, i.e.
 	\begin{align*}
 		V = U\oplus U^\bot.
-	\end{align*}	
+	\end{align*}
 \end{proposition}
 
 \begin{definition}
 	Let $U\subseteq V$ be a finite dimensional subspace of an inner product space $V$. The space $U^\bot$
-	is the \emph{orthogonal complement to $U$}. The \emph{orthogonal projection from $V$ to $U$} is 
-	the mapping 
+	is the \emph{orthogonal complement to $U$}. The \emph{orthogonal projection from $V$ to $U$} is
+	the mapping
 	\begin{align*}
 		\pi_U:V\to V
 	\end{align*}
 	that sends $\vec v = \vec p + \vec r$ to $\vec p$ where $\vec v\in V$, $\vec p\in U$, and $\vec r\in U^\bot$.
 \end{definition}
 
-\begin{proposition}[Notes 5.2.4]
-	Let $U$ be a finite dimensional subspace of an inner product space $V$ and let $\pi_U$ be the 
-	orthogonal projection from $V$ onto $U$.	
+\begin{proposition}[Proposition 5.2.4]
+	Let $U$ be a finite dimensional subspace of an inner product space $V$ and let $\pi_U$ be the
+	orthogonal projection from $V$ onto $U$.
 	\begin{enumerate}
 		\item $\pi_U$ is a linear mapping with $\im \pi_U=U$ and kernel $\ker \pi_U = U^\bot$.
-		\item If $\{\vec v_1,...,\vec v_n\}$ is an orthonormal basis of $U$, then $\pi_U$ is given 
-			by
-			\begin{align*}
-				\pi_U(\vec v)=\sum_{i=1}^n\lra{\vec v,\vec v_i}\vec v_i,
-			\end{align*}
-			for all $\vec v\in V$.
+		\item If $\{\vec v_1,...,\vec v_n\}$ is an orthonormal basis of $U$, then $\pi_U$ is given
+		      by
+		      \begin{align*}
+			      \pi_U(\vec v)=\sum_{i=1}^n\lra{\vec v,\vec v_i}\vec v_i,
+		      \end{align*}
+		      for all $\vec v\in V$.
 		\item $\pi_U^2=\pi_U$, i.e. $\pi_U$ is an idempotent.
 	\end{enumerate}
 \end{proposition}
 
 \begin{theorem}[Cauchy-Schwarz Inequality]
-	Let $V$ an inner product space and $\vec v,\vec w\in V$ . Then 
+	Let $V$ an inner product space and $\vec v,\vec w\in V$ . Then
 	\begin{align*}
 		\abs{\lra{v,w}}\leq \vabs{\vec v}\vabs{\vec w}
 	\end{align*}
 	with equality iff $\vec v$ and $\vec w$ are linearly dependent.
 \end{theorem}
 
-\begin{theorem}[Notes 5.2.7]
-	Let $\vec v_1,...,\vec v_k$ be linearly independent vectors in an inner product space $V$. Then 
+\begin{theorem}[Theorem 5.2.7]
+	Let $\vec v_1,...,\vec v_k$ be linearly independent vectors in an inner product space $V$. Then
 	there exists an orthonormal family $\vec w_1,...,\vec w_k$ such that, for all $1\leq i\leq k$,
 	\begin{align*}
-		\vec w_i\in \R_{>0}\vec v_i + \lra{\vec v_1,...,\vec v_{i-1}}.	
+		\vec w_i\in \R_{>0}\vec v_i + \lra{\vec v_1,...,\vec v_{i-1}}.
 	\end{align*}
 	\begin{proof}
 		Decompose $\vec v_i=\vec p_i+\vec r_i$ where $\vec p_i$ is the orthogonal projection of $\vec v_i$
@@ -1320,9 +1330,9 @@
 	We write $S=T^*$ and call $S$ the \emph{adjoint} of $T$.
 \end{definition}
 
-\begin{theorem}[Notes 5.3.4]
+\begin{theorem}[Theorem 5.3.4]
 	Let $V$ be a finite dimensional inner product space. Let $T:V\to V$ be an endomorphism. Then $T^*$
-	exists. That is, there exists a unique linear mapping $T^*:V\to V$ such that, for all $\vec v,\vec w\in V$,	
+	exists. That is, there exists a unique linear mapping $T^*:V\to V$ such that, for all $\vec v,\vec w\in V$,
 	\begin{align*}
 		\lra{T\vec v,\vec w}=\lra{\vec v, T^*\vec w}.
 	\end{align*}
@@ -1332,19 +1342,19 @@
 	An endomorphism of an inner product space $T:V\to V$ is \emph{self-adjoint} iff $T=T^*$.
 \end{definition}
 
-\begin{theorem}[Notes 5.3.7]
+\begin{theorem}[Theorem 5.3.7]
 	Let $T:V\to V$ be a self-adjoint linear mapping on an inner product space $V$.
 	\begin{enumerate}
 		\item Every eigenvalue of $T$ is real.
 		\item If $\lambda$ and $\mu$ are distinct eigenvalues of $T$ with corresponding eigenvectors
-			$\vec v,\vec u$, then $\lra{\vec v,\vec u}=0$.
+		      $\vec v,\vec u$, then $\lra{\vec v,\vec u}=0$.
 		\item $T$ has an eigenvalue.
-	\end{enumerate}	
+	\end{enumerate}
 \end{theorem}
 
 \begin{theorem}[The spectral theorem for self-adjoint endomorphisms]
-	Let $V$ be a finite dimensional inner product space and let $T:V\to V$ be a self-adjoint linear 
-	mapping. Then $V$ has an orthonormal basis consisting of eigenvectors of $T$.	
+	Let $V$ be a finite dimensional inner product space and let $T:V\to V$ be a self-adjoint linear
+	mapping. Then $V$ has an orthonormal basis consisting of eigenvectors of $T$.
 \end{theorem}
 
 \begin{definition}
@@ -1353,7 +1363,7 @@
 
 \begin{corollary}[The spectral theorem for real symmetric matrices]
 	Let $A$ be a real symmetric $(n\times n)$-matrix. Then there is an $(n\times n)$-orthogonal matrix $P$
-	such that 
+	such that
 	\begin{align*}
 		P^\top AP = \inv PAP = \diag(\lambda_1,...,\lambda_n)
 	\end{align*}
@@ -1363,5 +1373,169 @@
 \begin{definition}
 	A matrix $P\in\Mat(n;\C)$ is \emph{unitary} iff $\inv P=\overline{P}^\top$.
 \end{definition}
+
+\section{Jordan Normal Form}
+
+\begin{definition}
+	Given $r\in\N$ define $J(r)\in\Mat(n;F)$, called the \emph{nilpotent Jordan block of
+		size} $r$, by the rule $J(r)_{ij}=\delta_{i+1,j}$. I.e.
+	\begin{align*}
+		J(r) = \begin{pmatrix}
+			       0      & 1      & 0      & \cdots & 0      & 0      \\
+			       0      & 0      & 1      & \cdots & 0      & 0      \\
+			       0      & 0      & 0      & \cdots & 0      & 0      \\
+			       \vdots & \vdots & \vdots & \ddots & \vdots & \vdots \\
+			       0      & 0      & 0      & \cdots & 0      & 1      \\
+			       0      & 0      & 0      & \cdots & 0      & 0
+		       \end{pmatrix}
+	\end{align*}
+	Given $r\in\N$ and a scalar $\lambda\in F$ define $J(r,\lambda)\in\Mat(r; F)$, called the
+	\emph{Jordan block of size $r$ and eigenvalue $\lambda$}, by the rule
+	\begin{align*}
+		J(r,\lambda)=\lambda I_r + J(r) = D + N,
+	\end{align*}
+	i.e.
+	\begin{align*}
+		J(r,\lambda) = \begin{pmatrix}
+			               \lambda & 1       & 0       & \cdots & 0       & 0       \\
+			               0       & \lambda & 1       & \cdots & 0       & 0       \\
+			               0       & 0       & \lambda & \cdots & 0       & 0       \\
+			               \vdots  & \vdots  & \vdots  & \ddots & \vdots  & \vdots  \\
+			               0       & 0       & 0       & \cdots & \lambda & 1       \\
+			               0       & 0       & 0       & \cdots & 0       & \lambda
+		               \end{pmatrix}.
+	\end{align*}
+	In particular, $J(1)=(0)$, $\lambda I_r=\diag(\lambda, ..., \lambda)$, and $DN=ND$.
+\end{definition}
+
+\begin{lemma}
+	Let $V$ an $r$-dimensional $F$-vector space with basis $B=(\vec v_1,...,\vec v_r)$ and
+	$\lambda\in F$ a scalar. Then the endomorphism $f:V\to V$ defined by
+	\begin{align*}
+		f(\vec v_1) & =\lambda \vec v_1,              \\
+		f(\vec v_2) & =\vec v_1+\lambda \vec v_2,     \\
+		            & \vdots                          \\
+		f(\vec v_r) & =\vec v_{r-1}+\lambda \vec v_r.
+	\end{align*}
+	has matrix $\repr{B}{f}{B}$. The endomorphism $e=f-\lambda 1_V$ has nilpotent matrix
+	$\repr{B}{e}{B}=J(r)$. The characteristic polynomial of $f$ is $\chi_f(x)=(x-\lambda)^r\in F[x]$.
+	Further, for $j=1,...,r-1$,
+	\begin{align*}
+		V_j := \ker(e^j)=\lra{\vec v_1,...,\vec v_j}\subset V
+	\end{align*}
+	is a $j$-dimensional subspace such that $f(V_j)\subseteq V_j$. In particular, the $\lambda$-eigenspace
+	$E(\lambda, f)=V_1=\lra{\vec v_1}$ is $1$-dimensional.
+\end{lemma}
+
+Let $F$ be an algebraically closed field. Let $V$ be a finite dimensional vector space and let
+$\phi:V\to V$ be an endomorphism of $V$ with characteristic polynomial
+\begin{align*}
+	\chi_\phi(x)=(x-\lambda_1)^{a_1}\cdots (x-\lambda_s)^{a_s}\in F[x], \hs a_i\geq 1,\sum_{i=1}^s a_i=n,
+\end{align*}
+for distinct $\lambda_1,...,\lambda_s\in F$.
+
+\begin{theorem}[Jordan Normal Form]
+	There exists an ordered basis $B$ of $V$ such that
+	the matrix of $\phi$ with respect to $B$ is block diagonal with Jordan blocks on the diagonal. I.e.
+	\begin{align*}
+		\repr{B}{\phi}{B}=\diag(J(r_{11},\lambda_1),...,J(r_{1m_1},\lambda_1),...,J(r_{s1},\lambda_s),...,J(r_{sm_s},\lambda_s))
+	\end{align*}
+	with $r_{11},...,r_{1m_1},...,r_{s1},...,r_{sm_s}\in\N$ such that
+	\begin{align*}
+		a_i=\sum_{j=1}^{m_i} r_{i,j} \hs\text{for all }1\leq i\leq s.
+	\end{align*}
+\end{theorem}
+
+\begin{lemma}[Lemma 6.3.1]
+	For $1\leq j\leq s$ define,
+	\begin{align*}
+		P_j(x)=\prod_{\substack{i=1 \\ i\neq j}}^{a_i}(x-\lambda_i)^{a_i}.
+	\end{align*}
+	Then there exist polynomials $Q_1(x),...,Q_s(x)\in F[x]$ such that
+	\begin{align*}
+		\sum_{j=1}^s P_j(x)Q_j(x)=1.
+	\end{align*}
+\end{lemma}
+
+\begin{definition}
+	The \emph{generalised eigenspace} of $\phi$ with eigenvalue $\lambda_i$, $E^\text{gen}(\lambda_i,\phi)$,
+	is the following subspace of $V$:
+	\begin{align*}
+		E^\text{gen}(\lambda_i,\phi)=\{\vec v\in V : (\phi-\lambda_i 1_V)^{a_i}(\vec v)=\vec 0\}.
+	\end{align*}
+	The dimension of $E^\text{gen}(\lambda_i,\phi)$ is called the \emph{algebraic multiplicity of $\phi$
+		with eigenvalue $\lambda_i$} while the dimension of the eigenspace $E(\lambda_i,\phi)$ is called
+	the \emph{geometric multiplicity of $\phi$ with eigenvalue $\lambda_i$}.
+\end{definition}
+
+\begin{lemma}[Remark 6.3.3]
+	\begin{align*}
+		E(\lambda_i,\phi)\subseteq E^\text{gen}(\lambda_i,\phi).
+	\end{align*}
+\end{lemma}
+
+\begin{definition}
+	Let $f:X\to X$ be a mapping from a set $X$ to itself. A subset $Y\subseteq X$ is \emph{stable under}
+	$f$ precisely when $f(Y)\subseteq Y$.
+\end{definition}
+
+\begin{proposition}[Proposition 6.3.5]
+	For each $1\leq i\leq s$, let
+	\begin{align*}
+		B_i=\{\vec v_{ij}\in V : 1\leq j\leq a_i\}
+	\end{align*}
+	be a basis of $E^\text{gen}(\lambda_i,\phi)$. Then
+	\begin{enumerate}
+		\item Each $E^\text{gen}(\lambda_i,\phi)$ is stable under $\phi$.
+		\item For each $\vec v\ih V$ there exist unique $\vec v_i\in E^\text{gen}(\lambda_i,\phi)$
+		      such that $\vec v = \sum_{i=1}^s \vec v_i$. In other words, there is a direct sum decomposition
+		      \begin{align*}
+			      V = \bigoplus_{i=1}^s E^\text{gen}(\lambda_i,\phi)
+		      \end{align*}
+		      with $\phi$ restricting to endomorphisms of the summands \begin{align*}
+			      \phi_i = \eval{\phi}{E^\text{gen}(\lambda_i,\phi)}:E^\text{gen}(\lambda_i,\phi)\to E^\text{gen}(\lambda_i,\phi).
+		      \end{align*}
+		\item Then $B=B_1\cup\cdots\cup B_s$ is a basis of $V$. Further, \begin{align*}
+			      \repr{B}{\phi}{B}=\begin{pmatrix}
+				                        \repr{B_1}{\phi_1}{B_1} & \cdots & 0                       \\
+				                        \vdots                  & \ddots & \vdots                  \\
+				                        0                       & \cdots & \repr{B_s}{\phi_s}{B_s}
+			                        \end{pmatrix}
+		      \end{align*}
+		      is block diagonal.
+	\end{enumerate}
+\end{proposition}
+
+\begin{corollary}[Corollary, Exercise 90]
+	For each $A\in\Mat(n; F)$, there exist unique $D,N\in\Mat(n; F)$ such that $D$ is diagonalisable,
+	$N$ is nilpotent, $DN=ND$, and $A=D+N$. This is called the \emph{Jordan decomposition} of $A$.
+\end{corollary}
+
+\begin{lemma}[Lemma 6.3.6]
+	Let $W$ be a finite dimensional $F$-vector space and $\psi:W\to W$ an endomorphism such that
+	$\psi^{m-1}\neq 0$ and $\psi^m=0$ for some $m$. For $0\leq i\leq m$, define a subsapce
+	\begin{align*}
+		W_i=\ker(\psi^i)
+	\end{align*}
+	and a linear mapping
+	\begin{align*}
+		\psi_i:\frac{W_i}{W_{i-1}}\to \frac{W_{i-1}}{W_{i-2}}
+	\end{align*}
+	by $\psi_i(\vec w+W_{i-1})=\psi(\vec w)+W_{i-2}$ for $\vec w\in W_i$. Then $\psi_i$ is well-defined
+	and injective.
+\end{lemma}
+
+\begin{lemma}[Lemma 6.3.7]
+	Let $f:X\to Y$ be an injective map between $F$-vector spaces $X$ and $Y$. If $S\subseteq X$
+	is linearly independent in $X$, then $f(S)\subseteq Y$ is linearly independent in $Y$.
+\end{lemma}
+
+\begin{lemma}[Exercise 91]
+	Let $\psi:V\to V$ be a nilpotent endomorphism. Then there exists a basis $B$ of $V$ such that 
+	\begin{align*}
+		\repr{B}{\psi}{B}=\diag(J(b_1),...,J(b_s))
+	\end{align*}
+	where $b_1,...,b_s\in\N$ are unique up to reordering.
+\end{lemma}
 
 \end{document}
