--- a/2021_22/INT/notes/notes.tex
+++ b/2021_22/INT/notes/notes.tex
@@ -9,41 +9,88 @@
 \tableofcontents
 \pagebreak
 
-\section{Pythagorean triples}
+\section{Rings}
+
+\begin{definition}[Ring]
+	A \emph{ring} $(R,+,\cdot)$ is a set $R$ equipped with two binary operations
+	$+,\cdot:R\times R\to R$ such that $(R,+)$ is an abelian group, $(R,\cdot)$
+	is a monoid and the following equalities hold for all $a,b,c\in R$:
+	\begin{align*}
+		a       \cdot (b + c)   = a \cdot b + a \cdot c, \\
+		(a+b)   \cdot c         = a \cdot c + b \cdot c.
+	\end{align*}
+\end{definition}
+
+\begin{definition}[Commutative ring]
+	A ring $(R,+,\cdot)$ where for all $a,b,c\in R$, $a\cdot(b\cdot c) = (a\cdot b)\cdot c$
+	is called a \emph{commutative ring}.
+\end{definition}
+
+\begin{definition}[Unital ring]
+	A ring $(R,+,\cdot)$ where there exists an element $1\in R$ such that
+	for all $a\in R$, $1\cdot a = a \cdot 1 = a$ is called a \emph{unital ring}.
+\end{definition}
+
+\begin{definition}[Commutative ring with identity]
+	A ring which is commutative and unital is called a \emph{commutative ring
+		with identity}.
+\end{definition}
 
 \begin{definition}
-	Three natural numbers $(a,b,c)$ are called a \emph{pythagorean triple} if
+	Let $R$ be a ring, and let $x$ be any symbol not found in $R$. A polynomial in $x$ over $R$
+	is an expression of the form
+	\begin{align*}
+		\alpha(x)=\sum_{i=0}^\infty a_ix^i
+	\end{align*}
+	where $a_i\in R$ and $a_i=0$ almost everywhere.
+\end{definition}
+
+\begin{definition}
+	A \emph{field} is a non-zero commutative ring $(F, +, \cdot)$ such that for every non-zero 
+	$x\in F$ there exists $\inv x\in F$ such that $x\inv x = 1$.
+\end{definition}
+
+\begin{definition}
+	We define the following:
+	\begin{enumerate}
+		\item $\N$ the set of \emph{natural numbers},
+		\item $\Z$ the ring of \emph{integers},
+		\item $\R$ the field of \emph{real numbers}, and
+		\item $\C$ the field of \emph{complex numbers}.
+	\end{enumerate}
+\end{definition}
+
+\section{Integers}
+
+\subsection{Pythagorean triples}
+
+\begin{definition}
+	Three natural numbers $(a,b,c)$ are called a \emph{Pythagorean triple} if
 	\begin{align*}
 		a^2 + b^2 = c^2.
 	\end{align*}
 \end{definition}
 
-\begin{lemma}
-	If $(a,b,c)$ is a pythagorean triple and $d$ is any positive integer then
+\begin{lemma}[Lecture 1]
+	If $(a,b,c)$ is a Pythagorean triple and $d$ is any positive integer then
 	so is $(da,db,dc)$.
 \end{lemma}
 
 \begin{definition}
-	A pythagorean triple $(a,b,c)$ is called \emph{primitive} if they have no common factor.
+	A Pythagorean triple $(a,b,c)$ is called \emph{primitive} if $a,b,c$ have no common factor.
 \end{definition}
 
-\begin{theorem}
-	Every primitive pythagorean triple $(a,b,c)$ with $a$ odd satsifies
+\begin{theorem}[Lecture 1]
+	Every primitive Pythagorean triple $(a,b,c)$ with $a$ odd satsifies
 	\begin{align*}
 		a=s,\hs b=\frac{s^2-t^2}{2},\hs c=\frac{s^2+t^2}{2},
 	\end{align*}
 	where $s>t\geq 1$ are chosen to be odd integers with no common factors.
 \end{theorem}
 
-\section{Integers}
-
-\begin{theorem}[Well-ordering principle]
-	Every non-empty set of positive integers contains a least element.
-\end{theorem}
-
 \subsection{Division and remainders}
 
-\begin{theorem}[Division algorithm]
+\begin{theorem}[Division algorithm; Lecture 2]
 	Let $a,b\in\Z$ with $b>0$. Then there exists a unique pair $q,r\in\Z$ such that
 	\begin{align*}
 		a = qb + r
@@ -52,7 +99,7 @@
 \end{theorem}
 
 \begin{definition}
-	Let $a,b\in\Z$. We say that $a$ divides $b$, written $a|b$, if there exists $c\in\Z$
+	Let $a,b\in\Z$. We say that \emph{$a$ divides $b$}, written $a|b$, if there exists $c\in\Z$
 	such that $b=ac$.
 \end{definition}
 
@@ -73,10 +120,10 @@
 	For all integers $a,b,c$, $\gcd(a+cb,b)=\gcd(a,b)$.
 \end{proposition}
 
-\begin{lemma}[Bezout]
+\begin{theorem}[Bezout's Lemma]
 	Let $a,b\in\Z$, not both zero. Then there exist $s,t\in\Z$ such that
 	$as + bt = \gcd(a,b)$. Moreover, any common divisor of $a$ and $b$ divides $\gcd(a,b)$.
-\end{lemma}
+\end{theorem}
 
 \begin{corollary}[Boocher 3.7]
 	The set of linear combinations of two integers $a,b$ is equal to the set
@@ -86,7 +133,7 @@
 	\end{align*}
 \end{corollary}
 
-\begin{theorem}
+\begin{theorem}[Extended Euclidean algorithm; Lecture 2]
 	Let $a,b\in Z$ such that $a\geq b>0$.
 	The Euclidean algorithm described below always gives the greatest common divisor of
 	$a$ and $b$.
@@ -105,11 +152,13 @@
 
 \subsection{Primes}
 
-\begin{theorem}[Fundamental theorem of arithmetic]
-	Every $n\in\N$ has a unique representation as a product of primes:
+\begin{theorem}[Fundamental Theorem of Arithmetic]
+	Let $n>1$. Then there exist primes $p_1,...,p_k\in\Z$ such that 
 	\begin{align*}
-		n = p_1^{e_1}\cdots p_k^{e_k}.
+		n=p_1\cdots p_k.
 	\end{align*}
+	Moreover, if $n=p_1\cdots p_k=q_1\cdots q_m$ where all $p_i,q_j\in\Z$ are prime 
+	then $k=m$ and there exists $\pi\in S_k$ such that, for all $i$, $p_i=q_{\pi(i)}$. 
 \end{theorem}
 
 \begin{proposition}[Boocher 2.3]
@@ -136,11 +185,23 @@
 	If $n$ is composite then it must be divisible by some prime $p\leq\sqrt{n}$.
 \end{theorem}
 
-\begin{theorem}[Euclid; Boocher 2.6]
+\begin{theorem}[Euclid; Lecture 3]
 	There are infinitely many prime numbers.
 \end{theorem}
 
-\begin{theorem}[Dirichlet; Boocher 2.7]
+\begin{theorem}[Lecture 3]
+	There are infinitely many primes of the form $4k-1$.
+\end{theorem}
+
+\begin{theorem}[Lecture 3]
+	There are infinitely many primes of the form $4k+1$.
+\end{theorem}
+
+\begin{theorem}[Lecture 3]
+	There are infinitely many primes of the form $3k-1$.
+\end{theorem}
+
+\begin{theorem}[Dirichlet; Lecture 3]
 	If $a$ and $b$ are positive integers not divisible by the same prime then there are
 	infinitely many primes of the form $ak+b$.
 \end{theorem}
@@ -171,34 +232,7 @@
 	sum of two primes
 \end{conjecture}
 
-\section{Rings}
-
-\begin{definition}[Ring]
-	A \emph{ring} $(X,+,\cdot)$ is a set $X$ equipped with two binary operations
-	$+,\cdot:X\times X\to X$ such that $(X,+)$ is an abelian group, $(X,\cdot)$
-	is a monoid and the following equalities hold for all $a,b,c\in X$:
-	\begin{align*}
-		a       \cdot (b + c)   = a \cdot b + a \cdot c, \\
-		(a+b)   \cdot c         = a \cdot c + b \cdot c.
-	\end{align*}
-\end{definition}
-
-\begin{definition}[Commutative ring]
-	A ring $(X,+,\cdot)$ where for all $a,b,c\in X$, $a\cdot(b\cdot c) = (a\cdot b)\cdot c$
-	is called a \emph{commutative ring}.
-\end{definition}
-
-\begin{definition}[Unital ring]
-	A ring $(X,+,\cdot)$ where there exists an element $1\in X$ such that
-	for all $a\in X$, $1\cdot a = a \cdot 1 = a$ is called a \emph{unital ring}.
-\end{definition}
-
-\begin{definition}[Commutative ring with identity]
-	A ring which is commutative and unital is called a \emph{commutative ring
-		with identity}.
-\end{definition}
-
-\section{Congruences}
+\subsection{Congruences}
 
 \begin{definition}[Congruence]
 	The congruence $a\equiv b\mod n$ means that the difference $(a-b)$ is
@@ -206,13 +240,14 @@
 \end{definition}
 
 \begin{definition}
-	A \emph{complete system of residues modulo $n$} is a set of integers
+	A \emph{complete system of residues modulo $n$} is a set $S\subset\Z$ of integers
 	such that every integer is congruent modulo $n$ to exactly one integer
-	in the set. A \emph{least positive residue} for an integer $a$ is the
+	in the set. I.e., for all $a\in Z$, there exists $b\in S$ such that $a\equiv b\mod n$.
+	A \emph{least positive residue} for an integer $a$ is the
 	positive integer $b$ such that $a\equiv b \mod n$.
 \end{definition}
 
-\begin{theorem}
+\begin{theorem}[Lecture 4]
 	If $a,b,c,d\in\Z$ and $n\in\N$ with $a\equiv b\mod n$ and $c\equiv d\mod n$
 	then
 	\begin{align*}
@@ -234,13 +269,24 @@
 	Then \emph{the ring of integers modulo $n$} is $\Z_n=(\Z_n,+,\cdot)$.
 \end{definition}
 
-\begin{theorem}[Wilson]
+\begin{lemma}[Lecture 4]
+	Let $p$ be prime. Then the ring $\F_p:=\Z_p$ is a field.
+\end{lemma}
+
+\begin{theorem}[Wilson; Lecture 4]
 	If $p$ is prime then $(p-1)!\equiv -1 \mod p$.
 \end{theorem}
 
-\section{Chinese remainder theorem}
+\begin{lemma}[Lecture 5]
+	Let $m,n\in\Z$ be such that $\gcd(m,n)=1$. Then there exists $q\in\Z$ such that 
+	\begin{align*}
+		mq\equiv 1\mod n.
+	\end{align*}	
+\end{lemma}
 
-\begin{theorem}[Chinese remainder theorem]
+\subsection{Chinese remainder theorem}
+
+\begin{theorem}[Chinese remainder theorem; Lecture 5]
 	Let $m_1,...,m_k\in\N$ be pairwise coprime and let $a_1,...,a_k\in\Z$. Then there exists a
 	unique $0\leq x<m_1\cdots m_k$ such that
 	\begin{align*}
@@ -271,7 +317,7 @@
 	\end{proof}
 \end{theorem}
 
-\begin{theorem}
+\begin{theorem}[Lecture 5]
 	Let $m,n\in\Z$ be coprime. Let $a\in\Z$ then the congruence
 	\begin{align*}
 		x \equiv a \mod mn
@@ -283,7 +329,7 @@
 	\end{align*}
 \end{theorem}
 
-\section{Eulers theorem}
+\subsection{Eulers theorem}
 
 \begin{definition}
 	The \emph{Euler function $\phi(n)$} is defined as the number of natural numbers not exceeding
@@ -302,7 +348,7 @@
 \end{theorem}
 
 \begin{theorem}[Lecture 6, Theorem 2]
-	Let $m>1$. Suppose that $p_1,...,p_k$ are all distinct primes that divide $m$. Then
+	Let $m>1$. Suppose that $p_1,...,p_k\in\Z$ are all distinct primes that divide $m$. Then
 	\begin{align*}
 		\phi(m) = m\prod_{i=1}^k \left(1-\frac{1}{p_i}\right).
 	\end{align*}
@@ -315,7 +361,7 @@
 	\end{align*}
 \end{theorem}
 
-\section{Primitive roots}
+\subsection{Primitive roots}
 
 \begin{definition}
 	Let $p$ be prime. We say that $i\in\Z$ is a \emph{primitive root modulo $p$}
@@ -323,10 +369,7 @@
 	$i^m\not\equiv 1\mod p$ for $0<m<p-1$.
 \end{definition}
 
-\begin{definition}
-	Let $p$ be prime. Then the ring $\Z_p$ is a field and denoted by $\F_p$.
-	The ring of polynomials with coefficients in $\F_p$ is denoted by $\F_p[x]$.
-\end{definition}
+
 
 \begin{theorem}[Lecture 7, Theorem 2]
 	A non-zero polynomial $f\in\F_p[x]$ of degree $n$ has at most $n$ roots $x$
@@ -385,64 +428,7 @@
 	$\Z_p$.
 \end{theorem}
 
-\section{Coding theory}
-
-\begin{definition}[Lecture 9]
-	A \emph{(block) linear code} $C$ of length $n$ over the finite field $F$ is a subspace of the
-	$F$-vector space $F^n$.
-\end{definition}
-
-\begin{definition}[Cyclic code; Lecture 9]
-	A linear code $C$ is called cyclic if $c_1\cdots c_n\in C$ implies $c_nc_1\cdots c_{n-1}\in C$.
-\end{definition}
-
-\begin{definition}[Hamming metric; Lecture 10]
-	Let $C$ be a code over a field $F$. The \emph{Hamming metric $d$} on $C$ is the metric
-	$d:C\times C\to\R$ given by
-	\begin{align*}
-		d(x,y) = \abs{\{i\in{1,...,n}:x_i\not=y_i\}}
-	\end{align*}
-	for all $x=x_1\cdots x_n$ and $y=y_1\cdots y_n$.
-	For $x\in C$ we define the \emph{weight} of $x$, $w(x)$ by setting
-	\begin{align*}
-		w(x)=d(x,0)=\abs\{i\in {1,...,n} : x_i\not=0\}.
-	\end{align*}
-\end{definition}
-
-\begin{lemma}[Lecture 10]
-	Let $C$ be a linear code. Then the minimal distance is equal to the minimal possible weight
-	of a non-zero codeword in this code.
-\end{lemma}
-
-\begin{definition}[Lecture 10]
-	The triple $(n,k,d)$ comprises the three parameters of a linear code $C$: $n$ is the length of the
-	codewords, $k$ is the dimension of the code $\dim_F C=k$ an $d$ is the minimal distance of the code.
-\end{definition}
-
-\begin{definition}[Lecture 10]
-	Let $F$ be a field. For any word $x\in F^n$ and any $r\geq 0$, the neighbourhood of $x$ with radius
-	$r$ is the closed ball
-	\begin{align*}
-		N_r(x)=\{y\in F^n : d(x,y)\leq r\}.
-	\end{align*}
-\end{definition}
-
-\begin{lemma}[Lecture 10]
-	If $C$ is a code with the minimal distance $d>2r$, then for any codewords $c,c'\in C$ the neighbourhoods
-	$N_r(c)$ and $N_r(c')$ are disjoint.
-\end{lemma}
-
-\begin{definition}[Lecture 10]
-	Let $F$ be a field and $C\subseteq F^n$ be a code. A decision rule for $C$ is a function
-	$\sigma:F^n\to C$ which assigns to each $z\in F^n$ a codeword $c\in C$.
-\end{definition}
-
-\begin{definition}[Minimum distance rule; Lecture 10]
-	The \emph{minimum distance rule} is a decision rule $\sigma:F^n\to C$ such that
-	whenever $\sigma(x)=c$, for all $c'\in C$, $d(x,c) \leq d(x,c')$.
-\end{definition}
-
-\section{The Legendre symbol}
+\subsection{The Legendre symbol}
 
 \begin{definition}
 	Let $p>0$ prime and let $a,b\in\Z$ coprime to $p$.
@@ -491,15 +477,6 @@
 \section{Gaussian integers}
 
 \begin{definition}
-	Let $R$ be a ring, and let $x$ be any symbol not found in $R$. A polynomial in $x$ over $R$
-	is an expression of the form
-	\begin{align*}
-		\alpha(x)=\sum_{i=0}^\infty a_ix^i
-	\end{align*}
-	where $a_i\in R$ and $a_i=0$ almost everywhere.
-\end{definition}
-
-\begin{definition}
 	Let $\alpha(x)$ and $\gamma(x)$ be polynomials in $x$ over $R$ such that
 	\begin{align*}
 		\alpha(x)=\sum_{i=0}^\infty a_ix^i,\hs
@@ -519,6 +496,8 @@
 	\end{align*}
 \end{definition}
 
+\subsection{Units, primes and irreducibles}
+
 \begin{definition}
 	A Gaussian integer $z=\Z[i]$ is a unit if there exists $z'\in\Z[i]$ such that
 	$zz'=1$.
@@ -533,17 +512,17 @@
 	some $w\in\Z[i]$.
 \end{definition}
 
-\begin{definition}
-	Let $z=a+bi\in\Z[i]$ such that $z$ is neither zero nor a unit. We say that $z$ is irreducible
+\begin{definition}[Irreducibles]
+	Let $z=a+bi\in\Z[i]$ such that $z$ is neither zero nor a unit. We say that $z$ is \emph{irreducible}
 	if whenever $z=uv$ then either $u$ or $v$ is a unit.
 \end{definition}
 
-\begin{definition}
-	Let $z=a+bi\in\Z[i]$ such that $z$ is neither zero nor a unit. We say that $z$ is prime if
+\begin{definition}[Gaussian primes]
+	Let $z=a+bi\in\Z[i]$ such that $z$ is neither zero nor a unit. We say that $z$ is \emph{prime} if
 	whenever $z|uv$ for $u,v\in\Z[i]$ it follows that either $z|u$ or $z|v$.
 \end{definition}
 
-\begin{theorem}[Lecture 13]
+\begin{theorem}[Division algorithm for Gaussian integers]
 	Let $z,w\in\Z[i]$ with $w\not=0$. There exist $q,r\in\Z[i]$ with $z=qw+r$ and $\abs r<\abs w$.
 \end{theorem}
 
@@ -551,5 +530,96 @@
 	Let $a,b\in\Z[i]$ with $a\not=0$ or $b\not=0$ and let $d=\gcd(a,b)$. Then there exist $s,t\in\Z$
 	such that $as+bt=d$. Moreover, any common divisor of $a$ and $b$ divides $d$.
 \end{theorem}
+
+\begin{theorem}[Lectures 15-16]
+	Let $z\in\Z[i]$. Then $z$ is prime iff $z$ is irreducible.
+\end{theorem}
+
+\begin{theorem}[Fundamental Theorem of Arithmetic for Gaussian integers]
+	Let $a$ be a non-zero Gaussian integer. Then either $a$ is a unit or $a$ may be expressed 
+	as a product of finitely many primes.
+
+	Moreover, if $a=p_1\cdots p_n=q_1\cdots q_m$ where all $p_i,q_j\in\Z[i]$ are prime then 
+	$n=m$ and there exists $\pi\in S_n$ such that, for all $i$, $p_i$ and $q_{\pi(i)}$ are associates.
+\end{theorem}
+
+\subsection{Sums of two squares}
+
+\begin{theorem}[Lectures 15-16]
+	Let $p=4k+1$ be a prime in $\Z$ for some $k\in\N$. Then $p=a^2+b^2$ for some 
+	$a,b\in\Z$.
+\end{theorem}
+
+\begin{theorem}[Lectures 15-16]
+	Let $n\in\N$ and suppose there exist primes $p_1,...,p_s\in\N$ of the form 
+	$p_i=4k_i+1$ and primes $q_1,...,q_s\in\N$ of the form $q_j=4k'_j+3$ such that 
+	\begin{align*}
+		n=2^c p_1^{a_1}\cdots p_s^{a_s} q_1^{d_1}\cdots q_t^{d_t}
+	\end{align*}
+	for some $a_1,...,a_s,d_1,...,d_t\in\N$. Then there exit $a,b\in\Z$ with 
+	$n=a^2+b^2$ iff, for each $i$, $d_i$ is even.
+\end{theorem}
+
+\begin{lemma}[Lectures 15-16]
+	Let $p\in\Z$ be prime. Then $p=a^2+b^2$ for some $a,b\in\Z$ iff $p$ is a reducible 
+	as a Gaussian integer.	
+\end{lemma}
+
+\section{Coding theory}
+
+\begin{definition}[Lecture 9]
+	A \emph{(block) linear code} $C$ of length $n$ over the finite field $F$ is a subspace of the
+	$F$-vector space $F^n$.
+\end{definition}
+
+\begin{definition}[Cyclic code; Lecture 9]
+	A linear code $C$ is called cyclic if $c_1\cdots c_n\in C$ implies $c_nc_1\cdots c_{n-1}\in C$.
+\end{definition}
+
+\begin{definition}[Hamming metric; Lecture 10]
+	Let $C$ be an $F$-code. The \emph{Hamming metric $d$} on $C$ is the metric
+	$d:C\times C\to\R$ given by
+	\begin{align*}
+		d(x,y) = \abs{\{i\in{1,...,n}:x_i\not=y_i\}}
+	\end{align*}
+	for all $x=x_1\cdots x_n$ and $y=y_1\cdots y_n$.
+	For $x\in C$ we define the \emph{weight} of $x$, $w(x)$ by setting
+	\begin{align*}
+		w(x)=d(x,0)=\abs\{i\in {1,...,n} : x_i\not=0\}.
+	\end{align*}
+\end{definition}
+
+\begin{lemma}[Lecture 10]
+	Let $C$ be a linear code. Then the minimal distance is equal to the minimal possible weight
+	of a non-zero codeword in this code.
+\end{lemma}
+
+\begin{definition}[Lecture 10]
+	The triple $(n,k,d)$ comprises the three parameters of a linear code $C$: $n$ is the length of the
+	codewords, $k$ is the dimension of the code $\dim_F C=k$ an $d$ is the minimal distance of the code.
+\end{definition}
+
+\begin{definition}[Lecture 10]
+	Let $F$ be a field. For any word $x\in F^n$ and any $r\geq 0$, the neighbourhood of $x$ with radius
+	$r$ is the closed ball
+	\begin{align*}
+		N_r(x)=\{y\in F^n : d(x,y)\leq r\}.
+	\end{align*}
+\end{definition}
+
+\begin{lemma}[Lecture 10]
+	If $C$ is a code with the minimal distance $d>2r$, then for any codewords $c,c'\in C$ the neighbourhoods
+	$N_r(c)$ and $N_r(c')$ are disjoint.
+\end{lemma}
+
+\begin{definition}[Lecture 10]
+	Let $F$ be a field and $C\subseteq F^n$ be a code. A decision rule for $C$ is a function
+	$\sigma:F^n\to C$ which assigns to each $z\in F^n$ a codeword $c\in C$.
+\end{definition}
+
+\begin{definition}[Minimum distance rule; Lecture 10]
+	The \emph{minimum distance rule} is a decision rule $\sigma:F^n\to C$ such that
+	whenever $\sigma(x)=c$, for all $c'\in C$, $d(x,c) \leq d(x,c')$.
+\end{definition}
 
 \end{document}
